Vẫn lỗi lòi, chưa oauth được tí gì